Switch to using divs as tables (as gross as that is)

--- a/index.html
+++ b/index.html
@@ -7,31 +7,44 @@
   <body>
 
     <div class="logo">
-      <span class="pre mono">if </span>
-      <span class="post-coffee mono"> &&</span>
-      <span class="coffee">Coffee</span>
-      <span class="pre mono"></span>
-      <span class="post-powered mono"> :</span>
-      <span class="powered">Powered</span>
-      <span class="pre mono"></span>
-      <span class="post-code mono">();</span>
-      <span class="code">Code</span>
+      <div class="coffee">
+        <span class="pre">if </span>
+        <span> &&</span>
+        Coffee
+      </div>
+      <div class="powered">
+        <span> :</span>
+        Powered
+      </div>
+      <div class="code">
+        <span>();</span>
+        Code
+      </div>
     </div>
 
     <div class="logo">
-      <span class="pre mono">val mic</span>
-      <span class="mono">hael = _ match {</span>
-      <span class="code">&nbsp;</span>
-      <span class="pre mono">case </span>
-      <span class="post-coffee mono"> => drinkIt()</span>
-      <span class="coffee">Coffee</span>
-      <span class="pre mono">case </span>
-      <span class="post-powered mono"> => up()</span>
-      <span class="powered">Powered</span>
-      <span class="pre mono">case </span>
-      <span class="post-code mono"> => breakIt()</span>
-      <span class="code">Code</span>
-      <span class="pre mono">}      </span>
+      <div>
+        <span class="pre">val mic</span>
+        <span>hael = _ match {</span>
+      </div>
+      <div class="coffee">
+        <span class="pre">case </span>
+        <span> => drinkIt()</span>
+        Coffee
+      </div>
+      <div class="powered">
+        <span class="pre">case </span>
+        <span> => up()</span>
+        Powered
+      </div>
+      <div class="code">
+        <span class="pre">case </span>
+        <span> => breakIt()</span>
+        Code
+      </div>
+      <div>
+        <span class="pre">}      </span>
+      </div>
     </div>
   </body>
 </html>
