Add in the other example logos

--- a/index.html
+++ b/index.html
@@ -24,6 +24,77 @@
 
     <div class="logo">
       <div>
+        <span class="pre">developer { </span>
+        <span>'michael':</span>
+      </div>
+      <div class="coffee">
+        <span class="pre">drink  => </span>
+        <span>,</span>
+        Coffee
+      </div>
+      <div class="powered">
+        <span class="pre">ensure => </span>
+        <span>,</span>
+        Powered
+      </div>
+      <div class="code">
+        <span class="pre">write  => </span>
+        <span>,</span>
+        Code
+      </div>
+      <div>
+        <span class="pre">}           </span>
+      </div>
+    </div>
+
+    <div class="logo">
+      <div class="coffee">
+        <span class="pre">._</span>
+        <span> {</span>
+        Coffee
+      </div>
+      <div class="powered">
+        <span class="pre"></span>
+        <span>: 100%;</span>
+        Powered
+      </div>
+      <div class="code">
+        <span class="pre"></span>
+        <span>: '\u2603';</span>
+        Code
+      </div>
+      <div>
+        <span class="pre">} </span>
+      </div>
+    </div>
+
+    <div class="logo">
+      <div>
+        <span class="pre">var</span>
+        <span> michael = {</span>
+      </div>
+      <div class="coffee">
+        <span class="pre"></span>
+        <span>: 'Good',</span>
+        Coffee
+      </div>
+      <div class="powered">
+        <span class="pre"></span>
+        <span>': true,</span>
+        Powered
+      </div>
+      <div class="code">
+        <span class="pre"></span>
+        <span>: '\u2603'</span>
+        Code
+      </div>
+      <div>
+        <span class="pre">}  </span>
+      </div>
+    </div>
+
+    <div class="logo">
+      <div>
         <span class="pre">val mic</span>
         <span>hael = _ match {</span>
       </div>
